syntax = "proto3";
package products;

option go_package = "product_grpc/product_grpc";

message ProductListRequest {}

message Product {
  string id = 1;
  string title = 2;
  string description = 3;
  float  price = 4;
  string image = 5;
}

message ProductList {
  repeated Product products = 1;
}

message ProductDetailRequest {
  string productId = 1;
}

service ProductService {
  rpc ListProducts(ProductListRequest) returns (ProductList) {}
  rpc ProductDetail(ProductDetailRequest) returns (Product) {}
}
